Allows the user to pick photo to add to the meal.

--- a/foodtrackerTests/Info.plist
+++ b/foodtrackerTests/Info.plist
@@ -18,5 +18,7 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Allows you to pick an image to add to your meal description.</string>
 </dict>
 </plist>
